--- a/docker/Dockerfile.linux.arm
+++ b/docker/Dockerfile.linux.arm
@@ -5,5 +5,5 @@ LABEL maintainer="Dheeraj Khardwal <dheeraj@khardwal.com>" \
   org.label-schema.vendor="Dheeraj Khardwal" \
   org.label-schema.schema-version="1.0"
 
-ADD release/linux/arm/ /bin/
-ENTRYPOINT [ "/bin/" ]
+ADD release/linux/arm/drone-maven /bin/
+ENTRYPOINT [ "/bin/drone-maven" ]
