--- a/docker/Dockerfile.linux.arm
+++ b/docker/Dockerfile.linux.arm
@@ -1,4 +1,4 @@
-FROM plugins/base:mulitarch
+FROM plugins/base:linux-arm
 
 LABEL maintainer="Dheeraj Khardwal <dheeraj@khardwal.com>" \
   org.label-schema.name="Drone Maven" \
